devops/kubernetes/frontend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: evogym-frontend
  labels:
    app.kubernetes.io/name: evogym-frontend
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: evogym-frontend
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
